# rust-templates

./: .gitmodules  Cargo.toml  DESCRIPTION  README.md  cargo-generate.toml
.github/: build.yml
.github/workflows/: check.yml  nostd.yml
R/: extendr-wrappers.R
benches/: README.md  benchmarks.rs
crates/python_bindings/: Cargo.toml
crates/python_bindings/src/: lib.rs
python/: main.py
src/: Makevars.in  Makevars.win.in  entrypoint.c  lib.rs  main.rs  rust-templates-win.def  sync.rs
src/rust/: Cargo.toml
src/rust/crates/r-bindings/: Cargo.toml
src/rust/crates/r-bindings/src/: lib.rs
src/tests/: README.md  loom.rs  mod.rs  shuttle.rs
