[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.8.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

[[bench]]
name = "{{project-name}}_benchmarks"
harness = false
