[package]
name = "bin-template"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.8.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)', 'cfg(shuttle)'] }

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
